dc-svc-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamefinder
  namespace: gamefinder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamefinder
  template:
    metadata:
      labels:
        app: gamefinder
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: secret-volume
        secret:
          secretName: gamefinder-env
      containers:
      - name: nginx
        image: nginx:1.18-alpine
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /etc/nginx
          readOnly: true
          name: nginx-conf
        ports:
        - containerPort: 80
          protocol: TCP
      - name: gamefinder
        image: ${CICD_IMAGE}:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: secret-volume
          readOnly: true
          mountPath: "/var/www/html/.env"
        ports:
        - containerPort: 9000
          protocol: TCP

apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-conf
  namespace: gamefinder
data:
  nginx.conf: |
    [...]
---

apiVersion: v1
kind: Service
metadata:
  name: gamefinder-service
  namespace: gamefinder
spec:
  type: ClusterIP
  ports:
    - name: gamefinder-port
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: gamefinder

---

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: gamefinder-ingress
  namespace: gamefinder
spec:
  rules:
    - host: gamefinder.guldentech.com
      http:
        paths:
          - path: /
            backend:
              serviceName: gamefinder-service
              servicePort: gamefinder-port
